Bug 46330 - synaptics uses card32 type for PressureMotionMinZ, not supported by synclient or xinput
Summary: synaptics uses card32 type for PressureMotionMinZ, not supported by synclient...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-20 01:50 UTC by Erich Schubert
Modified: 2012-02-20 17:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Erich Schubert 2012-02-20 01:50:38 UTC
The synaptics Pressure Motion option was changed from float to CARDINAL 32:

http://cgit.freedesktop.org/xorg/driver/xf86-input-synaptics/commit/?id=a24c44375025576dd600ccf370ba365e5d94dc22

However, neither synclient nor xinput do yet seem to support this:

xinput:
Synaptics Pressure Motion (292):		... of unknown type CARDINAL

synclient:
  PressureMotionMinZ      = format mismatch (32)
  PressureMotionMaxZ      = format mismatch (32)

the easiest way of solving this for now would probably to revert back to an integer value for now. The cleaner way to add support for cardinal typed atoms to synclient and xinput.

This probably is the reason for bug #45278
because judging from the report, the pressure motion settings show the same issue. So he might just be seeing pressure motion in effect (which btw. is very annoying if you have a sensitive touchpad ...).
Comment 1 Peter Hutterer 2012-02-20 17:41:29 UTC
commit dfc3a8ed713c2878407c6443c4d3092da3125e0c
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Tue Feb 21 11:32:40 2012 +1000

    synclient: accept XA_CARDINAL as 32-bit type (#46330)
Comment 2 Peter Hutterer 2012-02-20 17:56:43 UTC
xinput patch proposed: http://patchwork.freedesktop.org/patch/9177/


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.