synclient: accept XA_CARDINAL as 32-bit type (#46330)

PressureMotionMaxZ and PressureMotionMinZ were changed from float to
XA_CARDINAL in 24c44375025576dd600ccf370ba365e5d94dc22. Accept the new type.

Fixes:
  PressureMotionMinZ      = format mismatch (32)
  PressureMotionMaxZ      = format mismatch (32)

X.Org Bug 46330 <http://bugs.freedesktop.org/show_bug.cgi?id=46330>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>